# dependency

./: .gitignore  README.md
lib/win32/: blas14.0DWin32.lib  blas14.0TWin32.lib  blas14.0Win32.lib  blas15.0DWin32.lib  blas15.0TWin32.lib  blas15.0Win32.lib  boost_regex-vc140-mt-1_43.lib  boost_regex-vc140-mt-gd-1_43.lib  freeglut.lib  glui32.lib  glut32.lib  libf2c14.0DWin32.lib  libf2c14.0TWin32.lib  libf2c14.0Win32.lib  libf2c15.0DWin32.lib  libf2c15.0TWin32.lib  libf2c15.0Win32.lib  python35_d.lib
lib/win64/: blas14.0Dx64.lib  blas14.0Tx64.lib  blas14.0x64.lib  blas15.0Dx64.lib  blas15.0Tx64.lib  blas15.0x64.lib  boost_regex-vc140-mt-1_43.lib  boost_regex-vc140-mt-gd-1_43.lib  freeglut.lib  glui32.lib  libf2c14.0Dx64.lib  libf2c14.0Tx64.lib  libf2c14.0x64.lib  libf2c15.0Dx64.lib  libf2c15.0Tx64.lib  libf2c15.0x64.lib  python35_d.lib
src/GL/: algebra3.h  arcball.h  freeglut.h  freeglut_ext.h  freeglut_std.h  glew.h  glui.h  glut.h  glxew.h  quaternion.h  stdinc.h  viewmodel.h  wglew.h
src/GL/cygwin/: glut.h  glxew.h  wglew.h
src/GL/darwin/: glew.h
src/GL/linux/: glu.h
src/GL/win32/: freeglut.h  freeglut_ext.h  freeglut_std.h  glut.h
src/al/: alctypes.h  altypes.h  alut.h  aluttypes.h
src/boost/: assert.hpp  bind.hpp  call_traits.hpp  checked_delete.hpp  compressed_pair.hpp  config.hpp  cstdint.hpp  current_function.hpp  get_pointer.hpp  integer_fwd.hpp  limits.hpp  memory_order.hpp  none.hpp  none_t.hpp  ref.hpp  scoped_array.hpp  scoped_ptr.hpp  shared_ptr.hpp  static_assert.hpp  throw_exception.hpp  version.hpp  visit_each.hpp  weak_ptr.hpp
src/boost/bind/: arg.hpp  bind.hpp  bind_mf_cc.hpp  placeholders.hpp
src/boost/config/: auto_link.hpp  select_compiler_config.hpp  select_platform_config.hpp  select_stdlib_config.hpp  suffix.hpp  user.hpp  warning_disable.hpp
src/boost/detail/: allocator_utilities.hpp  call_traits.hpp  catch_exceptions.hpp  compressed_pair.hpp  container_fwd.hpp  dynamic_bitset.hpp  endian.hpp  identifier.hpp  indirect_traits.hpp  interlocked.hpp  is_function_ref_tester.hpp  is_incrementable.hpp  is_xxx.hpp  iterator.hpp  lcast_precision.hpp  lightweight_test.hpp  lightweight_thread.hpp  limits.hpp  no_exceptions_support.hpp  none_t.hpp  numeric_traits.hpp  ob_call_traits.hpp  ob_compressed_pair.hpp  reference_content.hpp  scoped_enum_emulation.hpp  sp_typeinfo.hpp  utf8_codecvt_facet.hpp  workaround.hpp
src/boost/exception/: all.hpp  current_exception_cast.hpp  diagnostic_information.hpp  enable_error_info.hpp  errinfo_api_function.hpp  errinfo_errno.hpp  errinfo_nested_exception.hpp  error_info.hpp  exception.hpp  get_error_info.hpp  info.hpp  info_tuple.hpp  to_string.hpp  to_string_stub.hpp
src/boost/functional/: factory.hpp  forward_adapter.hpp  hash.hpp  hash_fwd.hpp  lightweight_forward_adapter.hpp  value_factory.hpp
src/boost/integer/: integer_mask.hpp
src/boost/mpl/: O1_size.hpp  O1_size_fwd.hpp  accumulate.hpp  advance.hpp  advance_fwd.hpp  alias.hpp  always.hpp  and.hpp  apply.hpp  apply_fwd.hpp  apply_wrap.hpp  arg.hpp  arg_fwd.hpp  arithmetic.hpp  as_sequence.hpp  assert.hpp  at.hpp  at_fwd.hpp  back.hpp  back_fwd.hpp  back_inserter.hpp  base.hpp  begin.hpp  begin_end.hpp  begin_end_fwd.hpp  bind.hpp  bind_fwd.hpp  bitand.hpp  bitor.hpp  bitwise.hpp  bitxor.hpp  bool.hpp  bool_fwd.hpp  clear.hpp  clear_fwd.hpp  comparison.hpp  contains.hpp  contains_fwd.hpp  copy.hpp  copy_if.hpp  (+143 more)
src/clapack/: Install_Win.bat  MSWin-Notes.txt  README.install  clapack14.0.sln  clapack14.0.vcxproj  clapack15.0.sln  clapack15.0.vcxproj
src/loadBmp/: Makefile.in  acconfig.h  configure  configure.in  loadBmp.sln  loadBmp10.sln  loadBmp9.sln
src/loadBmp/common/: Makefile.am  Makefile.in  config.h.in  config.vc  jmemsrc.cpp  jmemsrc.h  planybmp.cpp  planybmp.h  planydec.cpp  planydec.h  plbitmap.cpp  plbitmap.h  plbmpbase.cpp  plbmpbase.h  plbmpdec.cpp  plbmpdec.h  plbmpenc.cpp  plbmpenc.h  plbmpinfo.cpp  plbmpinfo.h  plcountedpointer.h  pldatasink.cpp  pldatasink.h  pldatasrc.cpp  pldatasrc.h  pldebug.h  pldirectfbbmp.cpp  pldirectfbbmp.h  plexcept.cpp  plexcept.h  plexif.cpp  plfilesink.cpp  plfilesink.h  plfilesrc.cpp  plfilesrc.h  plgifdec.cpp  plgifdec.h  pliff85.h  pliff85dec.cpp  pliff85dec.h  (+58 more)
src/loadBmp/common/Filter/: Makefile.am  Makefile.in  pl2passscale.h  plcontribdefs.h  plfilter.cpp  plfilter.h  plfiltercontrast.cpp  plfiltercontrast.h  plfiltercrop.cpp  plfiltercrop.h  plfilterfill.h  plfilterfillrect.h  plfilterflip.cpp  plfilterflip.h  plfilterfliprgb.cpp  plfilterfliprgb.h  plfiltergetalpha.cpp  plfiltergetalpha.h  plfiltergrayscale.cpp  plfiltergrayscale.h  plfilterintensity.cpp  plfilterintensity.h  plfilterlightness.cpp  plfilterlightness.h  plfiltermirror.cpp  plfiltermirror.h  plfilterpixel.h  plfilterquantize.cpp  plfilterquantize.h  plfilterresize.cpp  plfilterresize.h  plfilterresizebilinear.cpp  plfilterresizebilinear.h  plfilterresizebox.cpp  plfilterresizebox.h  plfilterresizegaussian.cpp  plfilterresizegaussian.h  plfilterresizehamming.cpp  plfilterresizehamming.h  plfilterrotate.cpp  (+7 more)
src/loadBmp/otherlib/libTiff/: tif_dir.h  tif_dirinfo.c  tif_predict.h  tiff.h  tiffcomp.h  tiffconf.h  tiffio.h  tiffiop.h
src/loadBmp/otherlib/libpng/: pngtest.c
src/loadBmp/otherlib/libungif/: dgif_lib.c  gif_lib.h  quantize.c
src/loadBmp/otherlib/zlib/: gzio.c  zlib.h
src/loadBmp/win/libjpeg/: jmorecfg.h  libjpeg.vcproj  libjpeg9.vcproj
src/loadBmp/win/libpng/: libpng9.vcproj
src/loadBmp/win/libtiff/: libtiff.vcproj  libtiff9.vcproj  port.h  version.h
src/loadBmp/win/libungif/: libungif.vcproj  libungif9.vcproj
src/loadBmp/win/loadBmp/: loadBmp.cpp  loadBmp.h  loadBmp.vcproj  loadBmp9.vcproj
src/loadBmp/win/paintlib/: paintlib.vcproj  paintlib9.vcproj  plStreamSink.cpp  plStreamSink.h  plddhelper.cpp  plddhelper.h  plddrawbmp.cpp  plddrawbmp.h  pldibsect.cpp  pldibsect.h  plressrc.cpp  plressrc.h  plwemfdec.cpp  plwemfdec.h  plwinbmp.cpp  plwinbmp.h
(+1535 files in other folders)
